--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,9 @@ font-family: 'Roboto', sans-serif;
 margin: 0px;
 display: flex;
 flex-direction: column;
+height: 100vh;
 gap: 10px;
+
 }
 
 .header{
@@ -14,10 +16,15 @@ background-color: #1f2937;
 display: flex;
 flex-direction: column;
 color: white;
-
+flex: 1 1 auto;
+/* flex-wrap: wrap; */
+/* align-content: space-between */
 
 }
 
+.header-container{
+    padding: 0px 260px;
+}
 ul,.sub-header-small,.sub-header-big{
     display: flex;
 }
@@ -43,27 +50,67 @@ a{
 }
 .sub-header-small{
     justify-content: space-between;
-    padding: 0px 150px;
+    /* padding: 0px 15px; */
 }
 
-.sub-header-small a{
+.sub-header-small .logo{
+    color: #f9faf8;
+    font-size: 24px;
     font-weight: 700;
 
 
 }
 .sub-header-small ul li a{
-    color: grey;
+    color: #c0c1bf;
     font-weight: 500;
+    font-size: 20px;
+
+    
     
 }
 .sub-header-big{
     justify-content: space-between;
     /* margin: 120px; */
-    padding: 150px;
+    padding: 100px 0px;
+    align-items: flex-start;
+    gap: 50px;
 
 }
 .header-big-left{
     flex: 1 1 0%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    
+}
+.header-big-left h1{
+    font-weight: 900;
+    color: #f9faf8;
+    font-size: 48px;
+    flex: 1 1 0%;
+    margin: 0px;
+
+}
+.header-big-left p{
+    /* font-weight: 900; */
+    font-size: 18px;
+    color: #e5e7eb;
+    margin: 0px;
+    flex: 1 1 0%;
+
+}
+
+.header-big-left button{
+    color: white;
+    width: 120px;
+    height: 38px;
+    padding: 0px 0px;
+    background-color: #3882f6;
+    border: 3px solid #3882f6;
+    border-radius: 8px;
+    font-weight: 700;
+    font-size: 15px;
+
 }
 .header-big-image{
     /* width: 540px; */
@@ -88,6 +135,7 @@ a{
 /* ---------------------------------------------------------------------------------------- */
 .main-body {
     margin: 30px;
+    flex: 1 1 auto;
     /* padding: 200px; */
 }
 
@@ -100,13 +148,13 @@ a{
 .main-body .row{
     display: flex;
     justify-content: center;
-    gap: 40px;
+    gap: 60px;
     padding: 50px;
     /* border: 2px solid red; */
     /* padding: 100px; */
 }
 .main-body-panel{
-    padding: 0px 200px;
+    padding: 0px 250px;
 }
 
 .row-item{
@@ -116,6 +164,9 @@ a{
     justify-content: center;
     /* padding: 50px; */
     text-align: center;
+    color: #565d5d;
+    font-weight: 500;
+    font-size: 18px;
     
 }
 
@@ -158,6 +209,7 @@ a{
      */
     display: flex;
     justify-content: center;
+    flex: 1 1 auto;
     /* padding: 100px 300px; */
 }
 
@@ -165,6 +217,7 @@ a{
 
 .peer2-body{
     padding:60px 180px;
+    flex: 1 1 auto;
 
 }
 .blue-background{
@@ -179,23 +232,25 @@ a{
     color: white;
     align-items: center;
 
-
 }
 
 .inside-blue button{
     color: white;
     width: 120px;
-    height: 47px;
-    padding: 10px 0px;
+    height: 38px;
+    padding: 0px 0px;
     background-color: #3882f6;
-    border: 2px solid white;
+    border: 3px solid white;
     border-radius: 8px;
-    /* display: inline-block; */
-    /* box-sizing: border-box; */
+    font-weight: 700;
+    font-size: 15px;
 
 
 }
 
+.call-to-action h1, .call-to-action p{
+    margin:0px;
+}
 
 
 
@@ -205,5 +260,9 @@ a{
     color: white;
     text-align: center;
     padding: 25px;
+    flex: 1 1 auto;
 
 }
+
+
+
